<resources>
    <string name="app_name">Famous Movies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="share_popular_movies">Share Popular Movies</string>
    <string name="rate_on_playstore">Rate Us on Playstore</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="suggestions">Suggest Improvements</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="app_heading">Popular Movies Two</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Favourite me now :(</string>
    <string name="popular_movies_text">Popularity is bullshit</string>
    <string name="top_rated_movies_text">Top Rated is just a myth</string>
    <string name="favourites_movies_text">Favourite sometimes</string>
    <string name="lorem">Contrary to popular belief</string>
    <string name="movie_info_placeholder">Movie Description will be displayed here</string>
    <string name="internet_eror_message">Check your Internet Connection</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="movie_title">I am the Movie Title</string>
    <string name="date_placeholder">2017 - 02 - 28</string>
    <string name="movie_rating">7.4</string>
    <string name="movie_img">Poster Image</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="error_msg">Something went wrong!!!</string>
    <string name="empty_review_author">No Reviews Found</string>
    <string name="empty_review_content">User yet to review the movie</string>
    <string name="movie_description_heading">Movie Description</string>
    <string name="movie_review_heading">Reviews</string>
</resources>
