<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share_app"
            android:icon="@drawable/ic_share_app"
            android:title="@string/share_popular_movies" />
        <item
            android:id="@+id/nav_rate_app"
            android:icon="@drawable/ic_star_unselected"
            android:title="@string/rate_on_playstore" />
        <item
            android:id="@+id/nav_invite_friends"
            android:icon="@drawable/ic_invite_friends"
            android:title="@string/invite_friends" />

        <item
            android:id="@+id/nav_suggest_improvements"
            android:icon="@drawable/ic_suggest_improvements"
            android:title="@string/suggestions" />

        <item
            android:id="@+id/nav_terms_of_use"
            android:icon="@drawable/ic_terms_of_use"
            android:title="@string/terms_of_use" />

        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_privacy_policy"
            android:title="@string/privacy_policy" />
    </group>


</menu>
